# llvm-dead-code-elimination

./: CMakeLists.txt  Makefile  README.md  compile_commands.json  example.ll  out.ll  out2.ll
.clangd/index/: ClientRA.cpp.0F08B12C7294144F.idx  DeadCodeElimination.cpp.802015DB859B84EC.idx  DeadCodeElimination.h.242AE13D1EAF7197.idx  RangeAnalysis.cpp.9F693BB63163DE80.idx  RangeAnalysis.h.6F7EDBBA83B49D0F.idx  vSSA.cpp.ED2311EFE277250F.idx  vSSA.h.A9F5AF8918241F2B.idx
DeadCodeElimination/: DeadCodeElimination.cpp  DeadCodeElimination.h
RangeAnalysis/: ClientRA.cpp
examples/: example0.ll  example1.ll
